authz error handling word wrap fix

--- a/AppiOS/www/css/app.css
+++ b/AppiOS/www/css/app.css
@@ -23,3 +23,8 @@
 .center {
 	margin: 0 auto;
 }
+
+/* Override jquery mobile style to allow breaking words to wrap */
+.ui-bar {
+	word-wrap: break-word;
+}
